tests/valid/valid_exists_and_ternary.csl
config ExistsFun {
  a?: number;
  b?: number;
  constraints {
    validate exists(a) ? exists(b) : true;
  };
}
