tests/invalid/invalid_constraints_missing_semicolon.csl
config InvalidConstraintSemicolon {
  a: boolean;
  constraints {
    validate a
  };
}
